Fix contact form overlapping header for certain screen sizes

--- a/src/client/src/components/CreateProjectPageBody.css
+++ b/src/client/src/components/CreateProjectPageBody.css
@@ -3,10 +3,8 @@
 }
 
 .wrapper {
-  position: absolute;
-  top: 38%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  margin: auto;
+  margin-top: 50px;
   width: 100%;
   max-width: 700px;
   background: #474B4F;
